Add agent-side build cache feature
Adds additional parameters to the Gradle build runner parameters
that enable the Gradle build cache feature.
The init-script adds the Gradle Hazelcast plugin and use the default
port and cache name, the host is supplied by the build feature.

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -7,6 +7,8 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
+    agent (project(path: ':agent', configuration: 'plugin'))
+
     compile group: 'com.hazelcast', name: 'hazelcast', version: '3.8'
 
     testCompile localGroovy()
