--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 plugins {
     id 'com.github.rodm.teamcity-server' version '1.0' apply true
     id 'com.jfrog.bintray' version '1.7.3'
+    id "org.sonarqube" version "2.3"
 }
 
 group = 'com.github.rodm'
