--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,6 +1,7 @@
 
 apply plugin: 'java'
 apply plugin: 'groovy'
+apply plugin: 'org.gradle.jacoco'
 apply plugin: 'com.github.rodm.teamcity-server'
 
 sourceCompatibility = 1.8
