Move shared constants to a common library

--- a/agent/build.gradle
+++ b/agent/build.gradle
@@ -8,6 +8,8 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
+    compile project(':common')
+
     testCompile localGroovy()
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.7.22'
