Exclude xom and it dependencies to remove malformed jar warning
icu4j-2.6.1.jar is a xom dependency that Gradle 4.0 reports as being
malformed its doesn't appear to be required to build or run TeamCity
plugins.

--- a/agent/build.gradle
+++ b/agent/build.gradle
@@ -7,6 +7,10 @@ apply plugin: 'com.github.rodm.teamcity-agent'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
+configurations {
+    all*.exclude module: 'xom'
+}
+
 dependencies {
     compile project(':common')
 
