--- a/common/build.gradle
+++ b/common/build.gradle
@@ -5,3 +5,7 @@ apply plugin: 'com.github.rodm.teamcity-common'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
+
+configurations {
+    all*.exclude module: 'xom'
+}
