Allow the Hazelcast plugin version to be overridden
The Java system property 'teamcity.build.cache.plugin.version' can be
set with the version of the plugin to use.
Resolves #2

--- a/agent/scripts/build-cache.gradle
+++ b/agent/scripts/build-cache.gradle
@@ -40,7 +40,10 @@ class TaskExecutionStatisticsPublisher extends BuildAdapter implements TaskExecu
 }
 
 initscript {
-    ext.hazelcastPluginVersion = GradleVersion.current() >= GradleVersion.version('4.0-milestone-2') ? '0.11' : '0.9'
+    ext.hazelcastPluginVersion = System.properties['teamcity.build.cache.plugin.version']
+    if (ext.hazelcastPluginVersion == null) {
+        ext.hazelcastPluginVersion = GradleVersion.current() >= GradleVersion.version('4.0-milestone-2') ? '0.11' : '0.9'
+    }
     logger.info("Applying Hazelcast plugin version: ${hazelcastPluginVersion}")
 
     repositories {
