--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 
 plugins {
-    id 'com.github.rodm.teamcity-server' version '1.0' apply true
-    id 'com.jfrog.bintray' version '1.7.3'
-    id 'org.sonarqube' version '2.5'
+    id 'com.github.rodm.teamcity-server' version '1.1.1'
+    id 'com.jfrog.bintray' version '1.8.3'
+    id 'org.sonarqube' version '2.6.2'
 }
 
 group = 'com.github.rodm'
