--- a/agent/build.gradle
+++ b/agent/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     compile project(':common')
 
     testCompile localGroovy()
+    testCompile gradleTestKit()
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.7.22'
 }
