--- a/build.gradle
+++ b/build.gradle
@@ -9,13 +9,15 @@ group = 'com.github.rodm'
 version = '0.5.1'
 
 ext {
+    teamcityVersion = project.findProperty('teamcity.api.version') ?: '2018.1'
+
     downloadsDir = project.findProperty('downloads.dir') ?: "$rootDir/downloads"
     serversDir = project.findProperty('servers.dir') ?: "$rootDir/servers"
     java8Home = project.findProperty('java8.home') ?: '/opt/jdk1.8.0_131'
 }
 
 teamcity {
-    version = '10.0'
+    version = "${teamcityVersion}"
 }
 
 bintray {
