Replace deprecated script configuration

--- a/agent/build.gradle
+++ b/agent/build.gradle
@@ -8,12 +8,12 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile project(':common')
+    implementation project(':common')
 
-    testCompile localGroovy()
-    testCompile gradleTestKit()
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.7.22'
+    testImplementation localGroovy()
+    testImplementation gradleTestKit()
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.7.22'
 }
 
 teamcity {
