--- a/agent/build.gradle
+++ b/agent/build.gradle
@@ -16,6 +16,16 @@ dependencies {
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.7.22'
 }
 
+test {
+    finalizedBy jacocoTestReport
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled = true
+    }
+}
+
 teamcity {
     agent {
         archiveName = "gradle-build-cache.zip"
