Configure build cache as a remote cache
To support builds using Gradle 6.x and later.

--- a/agent/scripts/build-cache.gradle
+++ b/agent/scripts/build-cache.gradle
@@ -68,7 +68,7 @@ if (GradleVersion.current() >= GradleVersion.version('3.5')) {
         def cacheClass = Class.forName('org.gradle.caching.hazelcast.HazelcastBuildCache')
         settings.apply(plugin: pluginClass)
         settings.buildCache {
-            local(cacheClass) {
+            remote(cacheClass) {
                 push = true
             }
         }
