Update Gradle, plugins and build dependencies

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,7 +1,11 @@
 
-apply plugin: 'java'
-apply plugin: 'org.gradle.jacoco'
-apply plugin: 'com.github.rodm.teamcity-common'
+plugins {
+    id 'org.gradle.java'
+    id 'org.gradle.jacoco'
+    id 'com.github.rodm.teamcity-common'
+}
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
