Update version for v0.5.2 release

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -51,6 +51,7 @@ teamcity {
 
         publish {
             token = findProperty('jetbrains.token')
+            notes = 'Update to support Gradle 6.x'
         }
     }
 
