--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'com.github.rodm'
-version = '0.5.2'
+version = '0.6-SNAPSHOT'
 
 ext {
     teamcityVersion = project.findProperty('teamcity.api.version') ?: '2018.1'
