Update minimum supported version of TeamCity

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -47,6 +47,7 @@ teamcity {
             email = 'rod.n.mackenzie@gmail.com'
             downloadUrl = 'https://github.com/rodm/teamcity-gradle-build-cache-plugin'
             useSeparateClassloader = true
+            minimumBuild = '58245'
         }
 
         publish {
