Ignore changes to TeamCity settings and readme

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,9 @@ name: Build
 on:
   push:
     branches: [ master ]
+    paths-ignore:
+      - '.teamcity/**'
+      - 'README.adoc'
 
 jobs:
   build:
